--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="collapse show" id="collapse2">
                 <div class="card-body" id="test">
-                    zefhLQIZEFHlzebZILEUGBzilgbLZIEGUBzmiegbZMG
+                    <img src="OLCT80.svg"   width="300" height="300" alt="...">
                 </div>
                 <div class="card-footer text-muted">
                     2 days ago
