--- a/index.html
+++ b/index.html
@@ -51,21 +51,25 @@
             <div class="card-header">
                 <ul class="nav nav-tabs card-header-tabs">
                     <div class="d-flex justify-content-between align-items-center"> 
-                        <a class="navbar-brand">Sensor Line1 Addr5</a>
+                        <a class="navbar-brand me-2">Sensor Line1 Addr5</a>
                         <form class="d-flex">
-                            <a href="#" class="text-decoration-none" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
-                                Min/Max
+                            <button type="button" class="btn btn-primary me-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-fullscreen" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707m4.344 0a.5.5 0 0 1 .707 0l4.096 4.096V11.5a.5.5 0 1 1 1 0v3.975a.5.5 0 0 1-.5.5H11.5a.5.5 0 0 1 0-1h2.768l-4.096-4.096a.5.5 0 0 1 0-.707m0-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707m-4.344 0a.5.5 0 0 1-.707 0L1.025 1.732V4.5a.5.5 0 0 1-1 0V.525a.5.5 0 0 1 .5-.5H4.5a.5.5 0 0 1 0 1H1.732l4.096 4.096a.5.5 0 0 1 0 .707"></path>
+                                </svg> 
+                            </button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapse2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fullscreen-exit" viewBox="0 0 16 16">
                                     <path d="M5.5 0a.5.5 0 0 1 .5.5v4A1.5 1.5 0 0 1 4.5 6h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5m5 0a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 10 4.5v-4a.5.5 0 0 1 .5-.5M0 10.5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 6 11.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5m10 1a1.5 1.5 0 0 1 1.5-1.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0z"></path>
                                 </svg>
-                            </a>
+                            </button>
                         </form>
                     </div>
                 </ul>
             </div>
             <div class="collapse show" id="collapse2">
                 <div class="card-body" id="test">
-                    <img src="OLCT80.svg"   width="300" height="300" alt="...">
+                    zefhLQIZEFHlzebZILEUGBzilgbLZIEGUBzmiegbZMG
                 </div>
                 <div class="card-footer text-muted">
                     2 days ago
@@ -73,22 +77,20 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card text-center border-primary mb-3">
             <div class="card-header">
                 <ul class="nav nav-tabs card-header-tabs">
-                    <div class="d-flex justify-content-between align-items-center"> 
-                        <a class="navbar-brand">Sensor Line1 Addr5</a>
-                        <form class="d-flex">
-                            <a href="#" class="text-decoration-none" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapseExample">
-                                Min/Max
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fullscreen-exit" viewBox="0 0 16 16">
-                                    <path d="M5.5 0a.5.5 0 0 1 .5.5v4A1.5 1.5 0 0 1 4.5 6h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5m5 0a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 10 4.5v-4a.5.5 0 0 1 .5-.5M0 10.5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 6 11.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5m10 1a1.5 1.5 0 0 1 1.5-1.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0z"></path>
-                                </svg>
-                            </a>
-                        </form>
-                    </div>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="true" href="#">ITRANS-2 Line2 Addr8</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#collapse3">Min</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Max</a>
+                  </li>
                 </ul>
-            </div>
+              </div>
             <div class="collapse show" id="collapse3">
                 <div class="card-body" id="test">
                     <img src="I-TRANS2.svg"   width="200" height="200" alt="...">
